feat: change for CFIE - attempt 1

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -4,13 +4,20 @@ $color-mid-grey: #999999;
 $color-dark-grey: #666666;
 $color-black: #000000;
 
-$color-red-step1: #ff462d;
-$color-red-step2: #ff422f;
-$color-red-step3: #ff3634;
-$color-red-step4: #ff223c;
-$color-red-step5: #ff0c45;
+// $color-red-step1: #ff462d;
+// $color-red-step2: #ff422f;
+// $color-red-step3: #ff3634;
+// $color-red-step4: #ff223c;
+// $color-red-step5: #ff0c45;
 
-$color-yellow: #ffbf1f;
+$color-red-step1: #4a6096;
+$color-red-step2: #4767b8;
+$color-red-step3: #3c61bf;
+$color-red-step4: #2e59c6;
+$color-red-step5: #1d49b9;
+
+// $color-yellow: #ffbf1f;
+$color-yellow: #00cdad;
 $color-blood-orange: #e54c23;
 $color-shadow: rgba($color-black, 0.2);
 
